[package]
name = "rust-playground"
version = "0.1.0"
authors = ["corocn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
futures = "0.3.13"
kana2phone = "0.1.0"
rand = "0.6.0"
clap = "3.0.0-beta.2"
anyhow = "1.0.39"


[profile.release]
opt-level = 3
panic = 'abort'

[profile.dev]
opt-level = 0
